schema/testdata/validation_jobs_duplicate_names/schema.keel
job MyJob {
    @schedule("* * * * *")
}

job MyJob {
    @schedule("* * * * *")
}