schema/testdata/errors/jobs_duplicate_names.keel
job MyJob {
    @schedule("* * * * *")
}

//expect-error:5:10:NamingError:There is already a job with the name MyJob
job MyJob {
    @schedule("* * * * *")
}
